--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 	display: flex;
 	margin: 0 auto;
 }
-.wrapper1 , .wrapper2{
+.wrapper1 , .wrapper2 , .wrapper3{
 	width: 1200px;
 	margin: 0 auto;
 }
@@ -62,6 +62,7 @@ li{
 	border-radius: 20px;
 	padding: 20px;
 	display: grid;
+	position: absolute;
 }
 .h2_1{
 	text-align: center;
@@ -86,7 +87,69 @@ hr{
 	width: 50%;
 	height: 25px;
 }
+.ul2{
+	display: flex;
+	margin-top: 0px;
+	margin-bottom: 50px;
+}
+.outerdiv{
+	display: grid;
+	background-color: white;
+	width: 220px;
+	border-radius: 25px;
+	margin-left: 50px;
+}
+.bluediv{
+	background-color: #00bcd4;
+	border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+}
+h5{
+	text-align: center;
+}
+.img3{
+	margin: 20px auto;
+}
+.btn2{
+	border:0px;
+	border-radius: 20px;
+	background-color: #bbd196;
+	color: white;
+	margin: 0 auto;
+	width: 100px;
 
+}
+.btn3{
+	border: 0px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	margin-right: auto;
+	margin-left: auto;
+	border-radius: 20px;
+	background-color: #1f4068;
+	color: white;
+	width: 100px;
+}
+.flex-container3{
+	display: flex;
+	margin: 0 auto;
+	background-color: #dfd3c3;
+}
+.h2_4{
+	display: inline-block;
+	font-size: 30px;
+	color: black;
+	margin-top: 60px;
+}
+.ul3{
+	display: flex;
+}
+.li3{
+	margin-top: 50px;
+	padding-left: 100px;
+	font-size: 18px;
+	color: black;
+}
 
 
 
@@ -163,952 +226,90 @@ hr{
 		width: 75%;
 		height: 15px;
 	}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*body{
-	background: url("https://www.freevector.com/uploads/vector/preview/30374/Colorful-Plait-Background.jpg") no-repeat center fixed;
-  	background-size: cover;
-  	margin: 0px;
-}
-.grid-container{
-	padding: 0px;
-	grid-template-columns: 340px auto auto;
-	display: grid;
-}
-.grid0{
-	background-color: white;
-	height: 50px;
-
-}
-.grid1{
-	text-align: left;
-	background-color: white;
-	height: 50px;
-}
-.grid2{
-	background-color: white;
-	text-align: right;
-	height: 50px;
-}
-.grid3{
-	height: 100px;
-	grid-column: 1/span 3;
-	text-align: center;
-	font-size: 20px;
-}
-.grid4{
-
-}
-
-.grid5{
-	grid-column: 2 / 4;
-
-}
-.grid6{
-	background-color: #e3dfc8;
-	grid-column: 1/span 3;
-	height: 150px;
-}
-h1{
-	margin-bottom: 0px;
+	.ul2{
+	display: block;
 	margin-top: 0px;
-	margin-left: 110px;
-}/*
-nav{
-	margin-top: 20px;
-	margin-right: 100px;
-	padding-right: 310px;
+	margin-bottom: 50px;
 }
-a{
-	text-decoration: none;
-	font-size: 18px;
-	margin-right: 10px;
-}
-
-p{
-	color: white;
-}
-div{
-	font-size: 20px;
-}
-
-.divinside{
+.outerdiv{
+	display: grid;
 	background-color: white;
-	border-radius: 20px;
-	padding: 20px;
-	height: 300px;
-	width: 200px;
-	margin: 30px 1px;
-	color: blue;
-	float: left;
-
-}
-.p{
-	font-size: 15px;
-	text-align: center;
-	color: blue;
-}
-h3{
-	text-align: center;
-	color: green;
-}
-hr{
-	width: 100px;
-	height: 2px;
-	background-color: green;
-}
-.btn1{
-	width: 100px;
-	border-radius: 20px;
-	text-align: center;
+	width: 220px;
+	border-radius: 25px;
 	margin-left: 50px;
-	margin-top: 30px;
-	background-color: #005086;
-	border:0px;
-	color: white;
 }
-.div-container1{
-	width: 800px;
-	height: 250px;
-	padding-left: 300px;
+.bluediv{
+	background-color: #00bcd4;
+	border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
-.smdiv1{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-h4{
+h5{
 	text-align: center;
-	font-size: 12px;
-	position: absolute;
-	left: 45px;
-	top: -10px;
 }
-.smdiv2{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-} 
-.smdiv3{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.div-container2{
-	width: 800px;
-	height: 250px;
-	padding-left: 300px;
-}
-.smdiv4{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.smdiv5{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.smdiv6{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.img1{
-	width: 150px;
-}
-.img2{
-	margin-left: 40px;
-	height: 100px;
+.img3{
+	margin: 20px auto;
 }
 .btn2{
-	width: 80px;
-	border-radius: 20px;
-	text-align: center;
-	margin-left: 33px;
-	background-color: #bbd196;
 	border:0px;
+	border-radius: 20px;
+	background-color: #bbd196;
 	color: white;
-	font-size: 8px;
+	margin: 0 auto;
+	width: 100px;
+
 }
 .btn3{
-	width: 80px;
+	border: 0px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	margin-right: auto;
+	margin-left: auto;
 	border-radius: 20px;
-	text-align: center;
-	margin-left: 33px;
-	background-color: #005086;
-	border:0px;
+	background-color: #1f4068;
 	color: white;
-	font-size: 8px;
-}
-h2{
-	display: inline-block;
-	padding-left: 340px;
-	position: relative;
-	color: #838383;
-}
-.contact1{
-	position: absolute;
-	padding-left: 630px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact2{
-	position: absolute;
-	padding-left: 760px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact3{
-	position: absolute;
-	padding-left: 890px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact4{
-	position: absolute;
-	padding-left: 1060px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-@media screen and (max-width: 1080px)
-{
-	.grid-container{
-		display: grid;
-		grid-template-columns: 1080px;
-	}
-	body{
-		background:url("https://images.pexels.com/photos/776653/pexels-photo-776653.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-	}
-	.grid0{
-		display: none;
-	}
-	.grid1{
-		/* text-align: left; 
-		background-color: powderblue;
-		height: 50px;
-		position: relative;
-		/* width: 1080px;
-	}
-	.grid2{
-		background-color: lightgreen;
-		text-align: left;
-		height: 30px;
-		position: absolute;
-		top: 50px;
-		/* width: 300px; 
-		width: 300px;
-	}
-	.grid3{
-		height: 100px;
-		grid-column: 1/span 1;
-		text-align: center;
-		font-size: 10px;
-		position: absolute;
-		top: 100px;
-		margin-left: 10px;
-		/* width: 300px; 
-	}	
-	.grid4{
-		display: none;
-	}
-	.grid5{
-		grid-column: 1/span 1;
-		position: absolute;
-		top: 150px;
-		width: 300px;
-	}
-	.grid6{
-		background-color: #e3dfc8;
-		grid-column: 1/span 1;
-		height: 500px;
-		position: absolute;
-		top: 2000px;
-		width: 300px;
-	}
-	.divinside{
-		background-color: #84a9ac;
-		border-radius: 20px;
-		padding: 20px;
-		height: 300px;
-		width: 200px;
-		margin-left: 150px;
-		color: black;
-		display: block;
-		position: relative;
-	}
-	.p{
-		font-size: 15px;
-		text-align: center;
-		color: blue;
-	}
-	h3{
-		text-align: center;
-		color: green;
-	}
-	hr{
-		width: 100px;
-		height: 2px;
-		background-color: green;
-	}
-	.btn1{
-		width: 100px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 50px;
-		margin-top: 30px;
-		background-color: #005086;
-		border:0px;
-		color: white;
-	}	
-	.div-container1{
-		width: 300px;
-		height: 700px;
-		position: absolute;
-		top: 400px;
-	}
-	.smdiv1{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	h4{
-		text-align: center;
-		font-size: 12px;
-		position: absolute;
-		left: 45px;
-		top: -10px;
-	}
-	.smdiv2{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	} 
-	.smdiv3{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display:block;
-		position: relative;
-	}
-	.div-container2{
-		width: 100%;
-		height: 1200px;
-		position: absolute;
-		top: 1100px;
-	}
-	.smdiv4{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.smdiv5{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.smdiv6{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.img1{
-		width: 150px;
-	}
-	.img2{
-		margin-left: 40px;
-		height: 100px;
-	}
-	.btn2{
-		width: 80px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 33px;
-		background-color: #bbd196;
-		border:0px;
-		color: white;
-		font-size: 8px;
-	}
-	.btn3{
-		width: 80px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 33px;
-		background-color: #005086;
-		border:0px;
-		color: white;
-		font-size: 8px;
-	}
-	h2{
-		display: block;
-		position: relative;
-		color: #838383;
-	}
-	.contact1{
-		position: absolute;
-		font-size: 14px;
-		top: 100px;
-		color: #838383;
-	}
-	.contact2{
-		position: absolute;
-		font-size: 14px;
-		top: 130px;
-		color: #838383;
-		text-align: center;
-	}
-	.contact3{
-		position: absolute;
-		font-size: 14px;
-		top: 260px;
-		color: #838383;
-		text-align: center;
-	}
-	.contact4{
-		position: absolute;
-		font-size: 14px;
-		top: 390px;
-		color: #838383;
-		text-align: center;
-	}
-}/*body{
-	background: url("https://www.freevector.com/uploads/vector/preview/30374/Colorful-Plait-Background.jpg") no-repeat center fixed;
-  	background-size: cover;
-  	margin: 0px;
-}
-.grid-container{
-	padding: 0px;
-	grid-template-columns: 340px auto auto;
-	display: grid;
-}
-.grid0{
-	background-color: white;
-	height: 50px;
-
-}
-.grid1{
-	text-align: left;
-	background-color: white;
-	height: 50px;
-}
-.grid2{
-	background-color: white;
-	text-align: right;
-	height: 50px;
-}
-.grid3{
-	height: 100px;
-	grid-column: 1/span 3;
-	text-align: center;
-	font-size: 20px;
-}
-.grid4{
-
-}
-
-.grid5{
-	grid-column: 2 / 4;
-
-}
-.grid6{
-	background-color: #e3dfc8;
-	grid-column: 1/span 3;
-	height: 150px;
-}
-h1{
-	margin-bottom: 0px;
-	margin-top: 0px;
-}/*
-nav{
-	margin-top: 20px;
-	margin-right: 100px;
-	padding-right: 310px;
-}
-a{
-	text-decoration: none;
-	font-size: 18px;
-	margin-right: 10px;
-}
-
-p{
-	color: white;
-}
-div{
-	font-size: 20px;
-}
-
-.divinside{
-	background-color: white;
-	border-radius: 20px;
-	padding: 20px;
-	height: 300px;
-	width: 200px;
-	margin: 30px 1px;
-	color: blue;
-	float: left;
-
-}
-.p{
-	font-size: 15px;
-	text-align: center;
-	color: blue;
-}
-h3{
-	text-align: center;
-	color: green;
-}
-hr{
 	width: 100px;
-	height: 2px;
-	background-color: green;
 }
-.btn1{
-	width: 100px;
-	border-radius: 20px;
-	text-align: center;
-	margin-left: 50px;
-	margin-top: 30px;
-	background-color: #005086;
-	border:0px;
-	color: white;
-}
-.div-container1{
-	width: 800px;
-	height: 250px;
-	padding-left: 300px;
-}
-.smdiv1{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-h4{
-	text-align: center;
-	font-size: 12px;
-	position: absolute;
-	left: 45px;
-	top: -10px;
-}
-.smdiv2{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-} 
-.smdiv3{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.div-container2{
-	width: 800px;
-	height: 250px;
-	padding-left: 300px;
-}
-.smdiv4{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.smdiv5{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.smdiv6{
-	width: 150px; 
-	height: 200px; 
-	background-color: white; 
-	border-radius: 10px;
-	margin-right: 30px;
-	margin-top: 30px;
-	display: inline-block;
-	position: relative;
-}
-.img1{
-	width: 150px;
-}
-.img2{
-	margin-left: 40px;
-	height: 100px;
-}
-.btn2{
-	width: 80px;
-	border-radius: 20px;
-	text-align: center;
-	margin-left: 33px;
-	background-color: #bbd196;
-	border:0px;
-	color: white;
-	font-size: 8px;
-}
-.btn3{
-	width: 80px;
-	border-radius: 20px;
-	text-align: center;
-	margin-left: 33px;
-	background-color: #005086;
-	border:0px;
-	color: white;
-	font-size: 8px;
-}
-h2{
-	display: inline-block;
-	padding-left: 340px;
-	position: relative;
-	color: #838383;
-}
-.contact1{
-	position: absolute;
-	padding-left: 630px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact2{
-	position: absolute;
-	padding-left: 760px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact3{
-	position: absolute;
-	padding-left: 890px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-.contact4{
-	position: absolute;
-	padding-left: 1060px;
-	font-size: 14px;
-	top: 667px;
-	color: #838383;
-}
-@media screen and (max-width: 1080px)
-{
-	.grid-container{
-		display: grid;
-		grid-template-columns: auto;
+	.flex-container3{
+		display: flex;
+		margin: 0 auto;
+		background-color: #dfd3c3;
 	}
-	body{
-		background:url("https://images.pexels.com/photos/776653/pexels-photo-776653.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
-	}
-	.grid0{
-		display: none;
-	}
-	.grid1{
-		text-align: center;
-		background-color: powderblue;
-		height: 50px;
-		position: relative;
-
-	}
-	.grid2{
-		background-color: lightgreen;
-		text-align: left;
-		height: 50px;
-		position: absolute;
-		top: 50px;
-	}
-	.grid3{
-		height: 100px;
-		grid-column: 1/span 1;
-		text-align: left;
-		font-size: 10px;
-		position: absolute;
-		top: 100px;
-	}	
-	.grid4{
-		display: none;
-	}
-	.grid5{
-		grid-column: 1/span 1;
-		position: absolute;
-		top: 150px;
-	}
-	.grid6{
-		background-color: #e3dfc8;
-		grid-column: 1/span 1;
-		height: 500px;
-		position: absolute;
-		top: 2000px;
-	}
-	.divinside{
-		background-color: #84a9ac;
-		border-radius: 20px;
-		padding: 20px;
-		height: 300px;
-		width: 200px;
-		margin-left: 150px;
+	.h2_4{
+		font-size: 30px;
+		display: block;
 		color: black;
-		display: block;
-		position: relative;
-	}
-	.p{
-		font-size: 15px;
 		text-align: center;
-		color: blue;
+		margin-top: 60px;
 	}
-	h3{
+	.ul3{
+		display: grid;
 		text-align: center;
-		color: green;
 	}
-	hr{
-		width: 100px;
-		height: 2px;
-		background-color: green;
+	.li3{
+		padding: 0px;
+		margin-top: 50px;
+		font-size: 18px;
+		color: black;
 	}
-	.btn1{
-		width: 100px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 50px;
-		margin-top: 30px;
-		background-color: #005086;
-		border:0px;
-		color: white;
-	}	
-	.div-container1{
-		width: 100%;
-		height: 700px;
-		position: absolute;
-		top: 400px; 
-	}
-	.smdiv1{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	h4{
-		text-align: center;
-		font-size: 12px;
-		position: absolute;
-		left: 45px;
-		top: -10px;
-	}
-	.smdiv2{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	} 
-	.smdiv3{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display:block;
-		position: relative;
-	}
-	.div-container2{
-		width: 100%;
-		height: 1200px;
-		position: absolute;
-		top: 1100px;
-	}
-	.smdiv4{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.smdiv5{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.smdiv6{
-		width: 150px; 
-		height: 200px; 
-		background-color: white; 
-		border-radius: 10px;
-		margin-top: 30px;
-		display: block;
-		position: relative;
-	}
-	.img1{
-		width: 150px;
-	}
-	.img2{
-		margin-left: 40px;
-		height: 100px;
-	}
-	.btn2{
-		width: 80px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 33px;
-		background-color: #bbd196;
-		border:0px;
-		color: white;
-		font-size: 8px;
-	}
-	.btn3{
-		width: 80px;
-		border-radius: 20px;
-		text-align: center;
-		margin-left: 33px;
-		background-color: #005086;
-		border:0px;
-		color: white;
-		font-size: 8px;
-	}
-	h2{
-		display: block;
-		position: relative;
-		color: #838383;
-	}
-	.contact1{
-		position: absolute;
-		font-size: 14px;
-		top: 100px;
-		color: #838383;
-	}
-	.contact2{
-		position: absolute;
-		font-size: 14px;
-		top: 130px;
-		color: #838383;
-	}
-	.contact3{
-		position: absolute;
-		font-size: 14px;
-		top: 260px;
-		color: #838383;
-	}
-	.contact4{
-		position: absolute;
-		font-size: 14px;
-		top: 390px;
-		color: #838383;
-	}
-}*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
